--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
                 <nav class="navbar navbar-expand-sm bg-dark p-0">
                     <ul class="navbar-nav ml-n2">
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="fetch('http://worldtimeapi.org/api/timezone/Asia/Kathmandu')
-  .then(response => response.json())
-  .then(data => {
-    const currentTime = data.datetime;
-    document.getElementById('nepal-time').innerHTML = currentTime;
-  });"></a>
+                            <a class="nav-link text-body small" href="<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>"></a>
                         </li>
                         <li class="nav-item border-right border-secondary">
                             <a class="nav-link text-body small" href="#">Advertise</a>
