--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <nav class="navbar navbar-expand-sm bg-dark p-0">
                     <ul class="navbar-nav ml-n2">
                         <li class="nav-item border-right border-secondary">
-                       <a class="nav-link text-body small" href="http://worldtimeapi.org/api/timezone/Asia/kathmandu"></a>
+                       <a class="nav-link text-body small" href="#"id="datetime"</a>
                         </li>
                         <li class="nav-item border-right border-secondary">
                             <a class="nav-link text-body small" href="#">Advertise</a>
